[tool.poetry]
name = "pybwi"
version = "0.1.0"
description = "'Browser window interface' for python commands."
authors = ["Michael Wooley <wm.wooley@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pydantic = { version = "^1.9.1", extras = ["dotenv", "email"] }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Cython = "^0.29.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
